tests/NormalTests/paczka1/fuzzy1/25091524.err
Error in line 2: BKV S46 38,2
Error in line 6: NKLHI S46 36,51
Error in line 11: VENwut S46 71,7
Error in line 4: NKLHI S46 11,9
Error in line 17: BKV S134 34,5
Error in line 20: NKLHI S161 44,17
Error in line 19: BKV A309 45,9
